--- a/index.html
+++ b/index.html
@@ -215,12 +215,12 @@
                 var compare = function (obj1, obj2) {
                     var val1 = obj1.goodNum;
                     var val2 = obj2.goodNum;
-                    if (val1 < val2) {
+                    if (val1 > val2) {
                         return -1;
-                    } else if (val1 > val2) {
+                    } else if (val1 < val2) {
                         return 1;
                     } else {
-                        if(obj1.submitTime < obj2.submitTime ){
+                        if(obj1.submitTime > obj2.submitTime ){
                             return -1;
 						} else if(obj1.submitTime < obj2.submitTime ){
                             return 1;
