--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 					<a href="javascript:;" onclick="comment('钢铁侠 Iron Man')" class="comment_btn">我来写短评</a>
 				</div>
 				<div id="comment1"></div>
+				<a href="javascript:;" onclick="layer.msg('功能开发中')" class="search_btn" id="search1">查看更多短评</a>
 			</div>
 		</div>
 		<div class="col-md-12" style="margin-top: 30px;">
@@ -80,9 +81,10 @@
 			<div class="col-md-9" style="height:370px;">
 				<div>
 					<p style="float: left; font-size: 28px;">木乃伊 The Mummy</p>
-					<a href="javascript:;" onclick="comment()" class="comment_btn">我来写短评</a>
+					<a href="javascript:;" onclick="comment('木乃伊 The Mummy')" class="comment_btn">我来写短评</a>
 				</div>
 				<div id="comment2"></div>
+				<a href="javascript:;" onclick="layer.msg('功能开发中')" class="search_btn" id="search2">查看更多短评</a>
 			</div>
 		</div>
 		<div class="col-md-12" style="margin-top: 30px;">
@@ -94,9 +96,10 @@
 			<div class="col-md-9" style="height:370px;">
 				<div>
 					<p style="float: left; font-size: 28px;">夺宝奇兵 Raiders of the Lost Ark</p>
-					<a href="javascript:;" onclick="comment()" class="comment_btn">我来写短评</a>
+					<a href="javascript:;" onclick="comment('夺宝奇兵 Raiders of the Lost Ark')" class="comment_btn">我来写短评</a>
 				</div>
 				<div id="comment3"></div>
+				<a href="javascript:;" onclick="layer.msg('功能开发中')" class="search_btn" id="search3">查看更多短评</a>
 			</div>
 		</div>
 		<div class="col-md-12" style="margin-top: 30px;">
@@ -108,9 +111,10 @@
 			<div class="col-md-9" style="height:370px;">
 				<div>
 					<p style="float: left; font-size: 28px;">机器人总动员 WALL·E</p>
-					<a href="javascript:;" onclick="comment()" class="comment_btn">我来写短评</a>
+					<a href="javascript:;" onclick="comment('机器人总动员 WALL·E')" class="comment_btn">我来写短评</a>
 				</div>
 				<div id="comment4"></div>
+				<a href="javascript:;" onclick="layer.msg('功能开发中')" class="search_btn" id="search4">查看更多短评</a>
 			</div>
 		</div>
 		<div class="col-md-12" style="margin-top: 30px;">
@@ -122,9 +126,10 @@
 			<div class="col-md-9" style="height:370px;">
 				<div>
 					<p style="float: left; font-size: 28px;">卡萨布兰卡 Casablanc</p>
-					<a href="javascript:;" onclick="comment()" class="comment_btn">我来写短评</a>
+					<a href="javascript:;" onclick="comment('卡萨布兰卡 Casablanc')" class="comment_btn">我来写短评</a>
 				</div>
 				<div id="comment5"></div>
+				<a href="javascript:;" onclick="layer.msg('功能开发中')" class="search_btn" id="search5">查看更多短评</a>
 			</div>
 		</div>
 		<div class="col-md-12" style="margin-top: 30px;">
@@ -136,9 +141,10 @@
 			<div class="col-md-9" style="height:370px;">
 				<div>
 					<p style="float: left; font-size: 28px;">泰坦尼克号 Titanic</p>
-					<a href="javascript:;" onclick="comment()" class="comment_btn">我来写短评</a>
+					<a href="javascript:;" onclick="comment('泰坦尼克号 Titanic')" class="comment_btn">我来写短评</a>
 				</div>
 				<div id="comment6"></div>
+				<a href="javascript:;" onclick="layer.msg('功能开发中')" class="search_btn" id="search6">查看更多短评</a>
 			</div>
 		</div>
 		<div class="col-md-12" style="margin-top: 30px;">
@@ -150,9 +156,10 @@
 			<div class="col-md-9" style="height:370px;">
 				<div>
 					<p style="float: left; font-size: 28px;">复仇者联盟 The Avengers</p>
-					<a href="javascript:;" onclick="comment()" class="comment_btn">我来写短评</a>
+					<a href="javascript:;" onclick="comment('复仇者联盟 The Avengers')" class="comment_btn">我来写短评</a>
 				</div>
 				<div id="comment7"></div>
+				<a href="javascript:;" onclick="layer.msg('功能开发中')" class="search_btn" id="search7">查看更多短评</a>
 			</div>
 		</div>
 
